objects/Inventory_Request__c.object
<CustomObject>
    <description>Parent object to capture the request to order new inventory items.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The location associated with the inventory request.</description>
        <inlineHelpText>The location associated with the inventory request</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Inventory Requests</relationshipLabel>
        <relationshipName>Inventory_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bypass_Validation_Rules__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Generally this shouldn&apos;t be used but if there is a mass import / upsert. It might come in handy.</description>
        <inlineHelpText>Generally this shouldn&apos;t be used but if there is a mass import / upsert. It might come in handy.</inlineHelpText>
        <label>Bypass Validation Rules</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Final_Approved_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Final Approved Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IR_Approved_Date__c</fullName>
        <description>Date Compliance has approved the IR. Only required before Assets can be generated.</description>
        <inlineHelpText>Date Compliance has approved the IR. Only required before Assets can be generated.</inlineHelpText>
        <label>IR Approved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Number_of_Items__c</fullName>
        <description>This is more of a helper field so we can generate line item numbers of the child records</description>
        <inlineHelpText>The total number of Child Line Items</inlineHelpText>
        <label>Total # of Line Items</label>
        <summaryForeignKey>Inventory_Request_Line_Item__c.Inventory_Request__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>PO_Approved_Date__c</fullName>
        <description>Date Finance has approved the PO. Only required before Assets can be generated.</description>
        <inlineHelpText>Date Finance has approved the PO. Only required before Assets can be generated.</inlineHelpText>
        <label>PO Approved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PO_Number__c</fullName>
        <description>The Great Plains purchase order number.</description>
        <inlineHelpText>The Great Plains purchase order number.</inlineHelpText>
        <label>PO Number</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Submitted_Date__c</fullName>
        <description>Date the PO has been submitted to Finance. Only required before Assets can be generated.</description>
        <inlineHelpText>Date the PO has been submitted to Finance. Only required before Assets can be generated.</inlineHelpText>
        <label>PO Submitted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Parent_Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The asset the software will be assigned to.</description>
        <inlineHelpText>The asset the software will be assigned to.</inlineHelpText>
        <label>Parent Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Inventory Requests</relationshipLabel>
        <relationshipName>Inventory_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>The status of the Inventory Request. This status will change based on various fields populated as well as state of approval.</description>
        <inlineHelpText>The status of the Inventory Request. This status will change based on various fields populated as well as state of approval.</inlineHelpText>
        <label>Request Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>IR Request Pending Approval</fullName>
                    <label>Pending Approval</label>
                </value>
                <value>
                    <fullName>Approved for PO</fullName>
                </value>
                <value>
                    <fullName>PO Submitted</fullName>
                </value>
                <value>
                    <fullName>PO Partially Fulfilled</fullName>
                </value>
                <value>
                    <fullName>PO Fulfilled</fullName>
                </value>
                <value>
                    <fullName>IR Request Submitted</fullName>
                    <isActive>false</isActive>
                    <label>IR Request Submitted</label>
                </value>
                <value>
                    <fullName>PO Delivery Date Scheduled</fullName>
                    <isActive>false</isActive>
                    <label>PO Delivery Date Scheduled</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Submitted_Date__c</fullName>
        <description>Date the request was submitted for approval.</description>
        <inlineHelpText>Date the request was submitted for approval.</inlineHelpText>
        <label>IR Submitted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Total_Nbr_of_Assets_Created__c</fullName>
        <description>The Total # of Assets Created for ALL Line Items.</description>
        <inlineHelpText>The Total # of Assets Created for ALL Line Items.</inlineHelpText>
        <label>Total # of Assets Created</label>
        <summarizedField>Inventory_Request_Line_Item__c.Number_of_Assets_Created__c</summarizedField>
        <summaryForeignKey>Inventory_Request_Line_Item__c.Inventory_Request__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Qty_Requested__c</fullName>
        <description>Sum of quantity requested on all line items.</description>
        <inlineHelpText>The summation of quantity requested from all the line items.</inlineHelpText>
        <label>Total Qty Requested</label>
        <summarizedField>Inventory_Request_Line_Item__c.Quantity__c</summarizedField>
        <summaryForeignKey>Inventory_Request_Line_Item__c.Inventory_Request__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Inventory Request</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Status__c</columns>
        <columns>Account__c</columns>
        <columns>Submitted_Date__c</columns>
        <columns>IR_Approved_Date__c</columns>
        <columns>PO_Number__c</columns>
        <columns>PO_Submitted_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>Total_Qty_Requested__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Gaming_Software_IRs</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Status__c</columns>
        <columns>Account__c</columns>
        <columns>Submitted_Date__c</columns>
        <columns>IR_Approved_Date__c</columns>
        <columns>PO_Number__c</columns>
        <columns>PO_Submitted_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Inventory_Request__c.Gaming_Software</value>
        </filters>
        <label>All Gaming Software IRs</label>
    </listViews>
    <nameField>
        <label>Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Inventory Requests</pluralLabel>
    <recordTypes>
        <fullName>Everything_Else</fullName>
        <active>false</active>
        <description>OBSOLETE probably have to remove from profiles!</description>
        <label>Everything Else</label>
    </recordTypes>
    <recordTypes>
        <fullName>Gaming_Software</fullName>
        <active>true</active>
        <description>Please select this record type for Inventory Requests related to Gaming Software.</description>
        <label>Gaming Software</label>
    </recordTypes>
    <recordTypes>
        <fullName>Machine_Parts</fullName>
        <active>true</active>
        <description>Please select this record type for Inventory Requests related to Machines or Parts.</description>
        <label>Machines / Parts</label>
    </recordTypes>
    <recordTypes>
        <fullName>Software</fullName>
        <active>false</active>
        <description>OBSOLETE probably have to remove from profiles!</description>
        <label>Software</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Ensure_Approved_Before_Entering_PO_Date</fullName>
        <active>true</active>
        <description>Ensures the Inventory Request was approved before the user enters the PO  Submitted Date</description>
        <errorConditionFormula>/*===============================================================================
 * Ensures the following:
 *
 * If the Inventory Request contains a Po Submitted Date...
 *
 *  1. the Inventory_Request_Status__c value != &apos;Open&apos; AND != &apos;Pending Approval&apos; 
 *  2. AND the record type is Gaming_Software.
 *  3. AND Bypass_Validation_Rules__c is not = TRUE
 *
 *================================================================================
 * 
 */
 IF( !ISBLANK( PO_Submitted_Date__c ),
AND(  OR(TEXT(Status__c) = &apos;Open&apos;,TEXT(Status__c) = &apos;Pending Approval&apos;) , RecordType.DeveloperName = &apos;Gaming_Software&apos;,Bypass_Validation_Rules__c = FALSE),FALSE)</errorConditionFormula>
        <errorDisplayField>PO_Submitted_Date__c</errorDisplayField>
        <errorMessage>The Inventory Request Must be Approved before entering the PO Submitted date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Ensure_Approved_Before_Entering_PO_Nbr</fullName>
        <active>true</active>
        <description>Ensures the Inventory Request was approved before the user enters the PO Number</description>
        <errorConditionFormula>/*===============================================================================
 * Ensures the following:
 * 
 *
 * If the Inventory Request contains a Po Number...
 *
 *  1. the Inventory_Request_Status__c value != &apos;Open&apos; AND != &apos;Pending Approval&apos; (it&apos;s an Order of Operations thing with process builder)
 *  2. AND the record type is Gaming_Software.
 *  3. AND Bypass_Validation_Rules__c is not = TRUE
 *
 *================================================================================
 * 
 */
 IF( !ISBLANK( PO_Number__c ),  
AND(  OR(TEXT(Status__c) = &apos;Open&apos;,TEXT(Status__c) = &apos;Pending Approval&apos;) , RecordType.DeveloperName = &apos;Gaming_Software&apos;,Bypass_Validation_Rules__c = FALSE),FALSE)</errorConditionFormula>
        <errorDisplayField>PO_Number__c</errorDisplayField>
        <errorMessage>The Inventory Request Must be Approved before entering the PO Number</errorMessage>
    </validationRules>
</CustomObject>